# be_legal_with_docker

./: .gitignore  README.md  pyproject.toml  run.sh
docker_manager/: README.md  __main__.py  pyproject.toml  run.sh
docker_manager/cli/: colors.py  input.py  output.py
docker_manager/commands/: cleanup.py  compose.py  containers.py  dashboard.py  livelogs.py  networks.py  registry.py
docker_manager/core/: __init__.py  docker.py
docker_manager/menus/: __init__.py  menus.py
docker_manager/src/docker_manager/: __init__.py
docker_manager/src/docker_manager/cli/: __init__.py  input.py
docker_manager/src/docker_manager/commands/: __init__.py  cleanup.py  containers.py  endpoints.py  images.py  registry.py  volumes.py
wsl_setup/: README.md  windows-autostart.ps1  wsl2-autostart.sh  wsl2-setup.sh
