[project]
name = "docker-manager"
version = "1.0.0"
description = "Interactive CLI tool for common Docker operations"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
docker-manager = "docker_manager.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
